--- a/app/globals.css
+++ b/app/globals.css
@@ -4,18 +4,30 @@
     --color-primary: #FB3819;
     --color-secondary: #080c0e;
     --color-text: #121b1f;
-    --color-background: #FaFBFC;
     --color-core-gray: #515455;
     --color-white: #FFFFFF;
     --color-off-white: #f2f5f7;
 }
 
+@media (prefers-color-scheme: light) {
+  :root {
+    --color-bg: #FaFBFC;
+  }
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --color-bg: #0D0D0D;
+  }
+}
+
 body {
-    background-color: var(--color-background);
+    background-color: var(--color-bg);
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
     font-family: "SF-Pro", sans-serif;
+    transition: background-color 0.5s ease, color 0.5s ease;
 }
 
 @font-face {
@@ -66,6 +78,14 @@ body {
     background: linear-gradient(180deg, #0d0d0d70, #fff);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
+}
+
+@media (prefers-color-scheme: dark) {
+  .corex {
+    background: linear-gradient(180deg, #ffffff, #0D0D0D70); /* Red gradient */
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+  }
 }
 
 @keyframes scroll-dot {
